--- a/CardioHealth/TasksAndSteps/HeartAgeControllers/APHHeartAgeSummary.storyboard
+++ b/CardioHealth/TasksAndSteps/HeartAgeControllers/APHHeartAgeSummary.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A388a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="VDE-ac-cZA">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
-        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -29,7 +28,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Today's Activites" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q9y-Sb-od2">
-                                                    <rect key="frame" x="8" y="11" width="129" height="21"/>
+                                                    <rect key="frame" x="20" y="11" width="129" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -51,6 +50,7 @@
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ug0-yw-NxK" customClass="APCCircularProgressView">
                                                     <rect key="frame" x="541" y="7" width="30" height="30"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.75075231480000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="30" id="DkK-vg-bYE"/>
                                                         <constraint firstAttribute="height" constant="30" id="KnZ-mM-hcB"/>
@@ -60,9 +60,8 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="Q9y-Sb-od2" firstAttribute="top" secondItem="oIa-tA-ZDm" secondAttribute="topMargin" constant="3" id="0Lj-Pj-zTz"/>
-                                                <constraint firstItem="Q9y-Sb-od2" firstAttribute="leading" secondItem="oIa-tA-ZDm" secondAttribute="leadingMargin" id="2rx-CW-T3S"/>
-                                                <constraint firstItem="xzK-Xt-03q" firstAttribute="firstBaseline" secondItem="Q9y-Sb-od2" secondAttribute="firstBaseline" id="3JQ-Mv-MPz"/>
-                                                <constraint firstItem="xzK-Xt-03q" firstAttribute="baseline" secondItem="Q9y-Sb-od2" secondAttribute="baseline" id="3Lg-9o-8V6"/>
+                                                <constraint firstItem="Q9y-Sb-od2" firstAttribute="top" secondItem="oIa-tA-ZDm" secondAttribute="topMargin" constant="3" id="8N1-gi-Gwv"/>
+                                                <constraint firstItem="Q9y-Sb-od2" firstAttribute="leading" secondItem="oIa-tA-ZDm" secondAttribute="leading" constant="20" id="Bdz-J9-VIu"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="xzK-Xt-03q" secondAttribute="bottom" constant="4" id="EEk-xb-G0K"/>
                                                 <constraint firstItem="xzK-Xt-03q" firstAttribute="centerY" secondItem="oIa-tA-ZDm" secondAttribute="centerY" id="H7b-Mt-Etg"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="xzK-Xt-03q" secondAttribute="trailing" constant="59" id="KI2-pf-zzh"/>
@@ -96,25 +95,25 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wUg-i0-ecg" id="n0S-8H-TRF">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" misplaced="YES" text="Your Heart Age Estimate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eOS-kG-4Pn">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Your Heart Age Estimate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eOS-kG-4Pn">
                                                     <rect key="frame" x="8" y="8" width="584" height="21.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Actual Age" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JJQ-2e-TMj">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Actual Age" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JJQ-2e-TMj">
                                                     <rect key="frame" x="40" y="49" width="83.5" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" misplaced="YES" text="Heart Age" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HLn-qW-wSy">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Heart Age" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HLn-qW-wSy">
                                                     <rect key="frame" x="476" y="49" width="84" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.75686281919999998" green="0.094117656349999995" blue="0.1294117719" alpha="1" colorSpace="deviceRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" misplaced="YES" text="00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DsA-ZA-tv9">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DsA-ZA-tv9">
                                                     <rect key="frame" x="8" y="77" width="147" height="86"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="DsA-ZA-tv9" secondAttribute="height" multiplier="147:86" id="wyb-FH-mKl"/>
@@ -123,7 +122,7 @@
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gko-ru-iNz">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gko-ru-iNz">
                                                     <rect key="frame" x="445" y="77" width="147" height="86"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="gko-ru-iNz" secondAttribute="height" multiplier="147:86" id="3sX-Ul-Hv2"/>
@@ -141,6 +140,7 @@
                                                 <constraint firstAttribute="trailingMargin" secondItem="HLn-qW-wSy" secondAttribute="trailing" constant="32" id="HXu-zO-OqX"/>
                                                 <constraint firstAttribute="trailing" secondItem="gko-ru-iNz" secondAttribute="trailing" constant="8" id="Mxr-h2-7tB"/>
                                                 <constraint firstItem="eOS-kG-4Pn" firstAttribute="leading" secondItem="n0S-8H-TRF" secondAttribute="leadingMargin" id="Qvt-DW-k4H"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="gko-ru-iNz" secondAttribute="bottom" constant="21" id="R4y-QI-v0P"/>
                                                 <constraint firstItem="HLn-qW-wSy" firstAttribute="top" secondItem="eOS-kG-4Pn" secondAttribute="bottom" constant="19.5" id="RhO-cR-LBB"/>
                                                 <constraint firstItem="eOS-kG-4Pn" firstAttribute="top" secondItem="n0S-8H-TRF" secondAttribute="topMargin" id="aJW-GC-JeV"/>
                                                 <constraint firstItem="JJQ-2e-TMj" firstAttribute="top" secondItem="eOS-kG-4Pn" secondAttribute="bottom" constant="19.5" id="bR1-t9-A37"/>
@@ -148,6 +148,7 @@
                                                 <constraint firstItem="HLn-qW-wSy" firstAttribute="leading" relation="lessThanOrEqual" secondItem="JJQ-2e-TMj" secondAttribute="trailing" constant="352.5" id="fIl-Wz-csM"/>
                                                 <constraint firstItem="eOS-kG-4Pn" firstAttribute="trailing" secondItem="n0S-8H-TRF" secondAttribute="trailingMargin" id="p2V-p5-mNp"/>
                                                 <constraint firstItem="JJQ-2e-TMj" firstAttribute="leading" secondItem="n0S-8H-TRF" secondAttribute="leadingMargin" constant="32" id="ppT-Il-j4m"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="DsA-ZA-tv9" secondAttribute="bottom" constant="21" id="tEg-hT-UlH"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -194,6 +195,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="14.42%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qFR-2B-TK5">
                                                     <rect key="frame" x="33" y="100.5" width="111" height="54"/>
                                                     <constraints>
+                                                        <constraint firstAttribute="width" secondItem="qFR-2B-TK5" secondAttribute="height" multiplier="37:18" id="9o3-CZ-ZUB"/>
                                                         <constraint firstAttribute="width" constant="111" id="cS0-X3-L0e"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="30"/>
