--- a/CardioHealth/Onboarding/APHOnboarding.storyboard
+++ b/CardioHealth/Onboarding/APHOnboarding.storyboard
@@ -686,49 +686,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="study_details_video" translatesAutoresizingMaskIntoConstraints="NO" id="kaf-Y5-2qE">
-                                <rect key="frame" x="0.0" y="64" width="320" height="215"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="215" id="JIc-ft-SZm"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
-                                </userDefinedRuntimeAttributes>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hax-dw-yo4">
-                                <rect key="frame" x="142" y="292" width="37" height="37"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="37" id="7Er-Xd-ig7"/>
-                                    <constraint firstAttribute="width" constant="37" id="TBI-mc-udW"/>
-                                </constraints>
-                            </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lwl-b8-7QB">
-                                <rect key="frame" x="16" y="338" width="288" height="222"/>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Pg-J7-jke">
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="hax-dw-yo4" secondAttribute="centerX" constant="-0.5" id="08J-be-rKj"/>
-                            <constraint firstItem="hax-dw-yo4" firstAttribute="top" secondItem="kaf-Y5-2qE" secondAttribute="bottom" constant="13" id="291-ev-wFA"/>
-                            <constraint firstItem="Lwl-b8-7QB" firstAttribute="top" secondItem="hax-dw-yo4" secondAttribute="bottom" constant="9" id="5qZ-Xb-0se"/>
-                            <constraint firstItem="kaf-Y5-2qE" firstAttribute="top" secondItem="706-ie-LFa" secondAttribute="bottom" id="7hv-Ny-WcA"/>
-                            <constraint firstItem="Lwl-b8-7QB" firstAttribute="trailing" secondItem="4MN-y1-FBo" secondAttribute="trailingMargin" id="CJb-I7-ohH"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="kaf-Y5-2qE" secondAttribute="trailing" constant="-16" id="OKZ-sV-nH8"/>
-                            <constraint firstItem="5LM-tc-Nfn" firstAttribute="top" secondItem="Lwl-b8-7QB" secondAttribute="bottom" constant="8" id="oJI-V7-1K9"/>
-                            <constraint firstItem="Lwl-b8-7QB" firstAttribute="leading" secondItem="4MN-y1-FBo" secondAttribute="leadingMargin" id="v1c-hN-f8H"/>
-                            <constraint firstItem="kaf-Y5-2qE" firstAttribute="leading" secondItem="4MN-y1-FBo" secondAttribute="leadingMargin" constant="-16" id="vo0-DR-AC6"/>
+                            <constraint firstItem="5LM-tc-Nfn" firstAttribute="top" secondItem="4Pg-J7-jke" secondAttribute="bottom" id="1w4-n2-gXM"/>
+                            <constraint firstItem="4Pg-J7-jke" firstAttribute="top" secondItem="706-ie-LFa" secondAttribute="bottom" id="7nh-AU-93f"/>
+                            <constraint firstAttribute="trailing" secondItem="4Pg-J7-jke" secondAttribute="trailing" id="K0w-S5-tjg"/>
+                            <constraint firstItem="4Pg-J7-jke" firstAttribute="leading" secondItem="4MN-y1-FBo" secondAttribute="leading" id="ZBR-Bd-3ky"/>
                         </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
-                        <outlet property="iconImageView" destination="hax-dw-yo4" id="qdp-xA-fZJ"/>
-                        <outlet property="textView" destination="Lwl-b8-7QB" id="7jD-yl-w3G"/>
-                        <outlet property="videoImageView" destination="kaf-Y5-2qE" id="H6M-nG-CWh"/>
+                        <outlet property="webView" destination="4Pg-J7-jke" id="Gvy-Di-BcG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BWn-9w-rMt" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1738,7 +1712,6 @@
         <image name="logo_disease" width="92" height="78"/>
         <image name="logo_researchInstitute" width="284" height="55"/>
         <image name="profilePlaceholder" width="150" height="150"/>
-        <image name="study_details_video" width="320" height="214"/>
         <image name="twitter_icon" width="56" height="56"/>
     </resources>
 </document>
