--- a/CardioHealth/TasksAndSteps/HeartAgeControllers/APHHeartAgeSummary.storyboard
+++ b/CardioHealth/TasksAndSteps/HeartAgeControllers/APHHeartAgeSummary.storyboard
@@ -258,7 +258,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" lineBreakMode="wordWrap" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="axs-tL-S2Q">
-                                                    <rect key="frame" x="0.0" y="36.5" width="600" height="21.5"/>
+                                                    <rect key="frame" x="18" y="36.5" width="564" height="21.5"/>
                                                     <string key="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -267,12 +267,12 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="ivn-43-NIO" firstAttribute="top" secondItem="J0r-JC-61X" secondAttribute="topMargin" id="0E7-9W-lvT"/>
-                                                <constraint firstItem="axs-tL-S2Q" firstAttribute="trailing" secondItem="J0r-JC-61X" secondAttribute="trailing" id="FW8-a9-amy"/>
                                                 <constraint firstItem="axs-tL-S2Q" firstAttribute="top" secondItem="ivn-43-NIO" secondAttribute="bottom" constant="8" id="Kpp-4v-kpM"/>
                                                 <constraint firstItem="ivn-43-NIO" firstAttribute="trailing" secondItem="J0r-JC-61X" secondAttribute="trailing" id="bkx-Hj-TmK"/>
-                                                <constraint firstItem="axs-tL-S2Q" firstAttribute="leading" secondItem="J0r-JC-61X" secondAttribute="leading" id="gsS-pj-bou"/>
+                                                <constraint firstItem="axs-tL-S2Q" firstAttribute="leading" secondItem="J0r-JC-61X" secondAttribute="leadingMargin" constant="10" id="kKd-d1-Bng"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="axs-tL-S2Q" secondAttribute="bottom" constant="11" id="qCK-hz-0aU"/>
                                                 <constraint firstItem="ivn-43-NIO" firstAttribute="leading" secondItem="J0r-JC-61X" secondAttribute="leading" id="qfR-ma-yvW"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="axs-tL-S2Q" secondAttribute="trailing" constant="10" id="vdL-bg-vK7"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
