--- a/CardioHealth/TasksAndSteps/APHFitnessTest/Intro/APHImportantDetailsTableViewController.storyboard
+++ b/CardioHealth/TasksAndSteps/APHFitnessTest/Intro/APHImportantDetailsTableViewController.storyboard
@@ -712,7 +712,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <state key="normal" title="Close">
-                                    <color key="titleColor" red="0.75686281919999998" green="0.094117656349999995" blue="0.1294117719" alpha="1" colorSpace="deviceRGB"/>
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
